--- a/src/app/browse-movies/browse-movies.component.html
+++ b/src/app/browse-movies/browse-movies.component.html
@@ -2,23 +2,12 @@
 <div>
   <h2 class="movies">Movie List</h2>
 </div>
+  <mat-grid-list cols="3">
+      <mat-grid-tile *ngFor="let movie of moviesList" (click)="movieDetails(movie)">
+        <img matCardImage src="{{movie.medium_cover_image}}" class="image">
+  </mat-grid-tile>
 
-  <mat-grid-list  cols="3" class="item" >
-    <mat-grid-tile  *ngFor="let movie of moviesList">
-  <mat-card  class="mat-card_c" (click)="movieDetails(movie)">
-    <mat-card-header>
-      <mat-card-title>{{movie.title}}</mat-card-title>
-    </mat-card-header>
-    <mat-card-subtitle>
-      <mat-icon>star rate</mat-icon>
-      {{movie.rating}}
-    </mat-card-subtitle>
-    <img matCardImage src="{{movie.medium_cover_image}}" class="image">
-    <!--<mat-card-content>-->
-      <!--{{movie.synopsis}}-->
-    <!--</mat-card-content>-->
-  </mat-card>
-    </mat-grid-tile>
+
   </mat-grid-list>
 
 
