--- a/src/app/header-comp/header-comp.component.html
+++ b/src/app/header-comp/header-comp.component.html
@@ -6,6 +6,12 @@
     <div class="button-row">
       <a mat-button routerLink="/login">Login</a>
     </div>
+    <div class="button-row">
+      <a mat-button routerLink="/users">Users</a>
+    </div>
+    <div class="button-row">
+      <a mat-button routerLink="/customers">Customers</a>
+    </div>
     <span class="example-fill-remaining-space"></span>
     <mat-menu #appMenu="matMenu" yPosition="below">
       <button mat-menu-item>
