--- a/src/app/sign-up/sign-up.component.css
+++ b/src/app/sign-up/sign-up.component.css
@@ -1,23 +1,18 @@
-
-.example-form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.example-button-row {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
 .parent-back {
   position: inherit;
-  alignment: center;
+ alignment: center;
 }
 .mat-card-signup {
   margin-top: 30px;
   margin-left: 20%;
   margin-right: 20%;
   width: auto;
+}
+
+.example-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .example-button-row {
   margin-top: 10px;
